--- a/index.html
+++ b/index.html
@@ -25,13 +25,31 @@
     // Result = (A + B < 4) ? 'Below': 'Over';
     // alert ("Kết quả: " + Result); BT. 2
 
-    let loggin = prompt("");
-    let message = (loggin =='Employee')?
-        "hello" :
-        (loggin =='Director')?
-        "Greeting" :
-        (loggin == "")?
-        "No loggin" :
-        "";
-    alert(message);
+    // let loggin = prompt("");
+    // let message = (loggin =='Employee')?
+    //     "hello" :
+    //     (loggin =='Director')?
+    //     "Greeting" :
+    //     (loggin == "")?
+    //     "No loggin" :
+    //     "";
+    // alert(message); BT. 2
+
+    // let Account = prompt("Enter your account", "");
+
+    // if (Account == "Admin") {
+    //     let Password = prompt ("Enter your password", "");
+    //     if (Password == "The Master") {
+    //         alert ("Welcome!");
+    //     } else if (Password == null) {
+    //         alert ("Canceled!");
+    //     } else {
+    //         alert ("wrong password");
+    //     }
+    // } else if (Account == null) {
+    //     alert ("Canceled!");
+    // } else {
+    //     alert ("i don't know you");
+    // } BT. 3
+    
 </script>
