--- a/index.html
+++ b/index.html
@@ -51,5 +51,45 @@
     // } else {
     //     alert ("i don't know you");
     // } BT. 3
+
+    // let Browser = prompt("Nhập vào browser: ", "");
+    // switch(Browser) {
+    //     case 'Edge':
+    //         alert("you've got the edge");
+    //         break;
+
+    //     case 'Firefox':
+    //     case 'Chrome':
+    //     case 'Safari':
+    //     case 'Opera':
+    //         alert("Ok! We support these browsers too!");
+    //         break;
+    //     default :
+    //         alert("we hope that this page look ok!");
+    //         break; 
+    // } BT. 4
+
+    // let a = prompt('a?', '');
+    // switch(a) {
+    //     case '0':
+    //         alert('0');
+    //         break;
+    //     case '1':
+    //         alert('1');
+    //         break;
+    //     case '2':
+    //     case '3':
+    //         alert('2,3');
+    //         break;
+    // } BT. 5
+
+    // let a = prompt('a?', "");
+    // if (a > 0) {
+    //     alert('1');
+    // } else if (a < 0) {
+    //     alert('-1');
+    // } else {
+    //     alert('0');
+    // } BT. 6
     
 </script>
